<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oneone"
    android:screenOrientation="portrait"
    tools:context="io.fuchsc.triceptional.ProgressChart">



    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:background="#E6B0AA"
        android:onClick="processUpdates"
        android:text="@string/update"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/chest"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="16dp"
        android:inputType="number"
        android:text="@string/currentchest"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/weight"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="59dp"
        android:layout_height="44dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="32dp"
        android:inputType="number"
        android:text="@string/currentweight"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/waist"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="18dp"
        android:inputType="number"
        android:text="@string/currentwaist"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/hips"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/hips"
        android:layout_width="61dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="37dp"
        android:inputType="number"
        android:text="@string/currenthips"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="36dp"
        android:text="@string/currentweightLabel"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:text="@string/currentChestLabel"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="17dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:text="@string/currentWaistLabel"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="47dp"
        android:text="@string/currentHipsLabel"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/updateLog"
        android:layout_width="261dp"
        android:layout_height="237dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</android.support.constraint.ConstraintLayout>
