<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/twotwo"
    android:screenOrientation="portrait"
    tools:context="io.fuchsc.triceptional.foodPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/foodheader"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="66dp" />

    <EditText
        android:id="@+id/foodType"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/foodTypePlace"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteY="107dp" />

    <EditText
        android:id="@+id/calAmount"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:text="@string/amount"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="108dp" />

    <Button
        android:id="@+id/addFood"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:background="@android:color/white"
        android:text="@string/update"
        android:onClick="updateNutrition"
        android:textColor="@color/colorAccent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/limit" />

    <EditText
        android:id="@+id/foodDiary"
        android:layout_width="254dp"
        android:layout_height="144dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textMultiLine"
        android:onClick="updateNutrition"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="165dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/limit"
        android:layout_width="103dp"
        android:layout_height="47dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/limit"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/calAmount"
        tools:layout_editor_absoluteY="156dp"
        tools:layout_editor_absoluteX="225dp" />

    <EditText
        android:id="@+id/currentCal"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/currentCal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/foodType"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/numAmount"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/currentCal"
        app:layout_constraintRight_toLeftOf="@+id/addFood"
        app:layout_constraintTop_toBottomOf="@+id/foodType"
        tools:layout_editor_absoluteY="163dp" />

    <Button
        android:id="@+id/reset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:background="@android:color/holo_red_light"
        android:onClick="resetAll"
        android:text="@string/reset"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/currentCal" />

</android.support.constraint.ConstraintLayout>
